--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "vue-persian-date-range-picker",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.1",
+  "private": false,
+  "main": "./dist/vue-date-range-picker.common.js",
+  "files": [
+    "dist/*",
+    "src/assets/*"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-lib": "vue-cli-service build --target lib --name vue-date-range-picker ./src/main.js"
   },
   "dependencies": {
     "core-js": "^3.4.3",
@@ -19,6 +25,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
+    "persian-date": "^1.1.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   }
